--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -1,3 +1,7 @@
+.gh-head {
+    background-color: transparent;
+}
+
 .gh-head-logo {
     font-size: 2.2rem;
     font-weight: 800;
